[package]
name = "navigation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


[profile.dev]
opt-level = 1 # Enable a small amount of optimization in debug mode

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.0"
iyes_perf_ui = "0.2.0"